# gatk_test_pipeline

./: .gitignore  Dockerfile  Makefile  README.md  Snakefile  pyproject.toml  requirements.txt  workflow_config.yaml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
data/: README.md
notebooks/: 01_variant_calling_pipeline.py  02_bisulfite_conversion_efficiency.py  README.md
notebooks/executed_ipynb/: 01_variant_calling_pipeline.ipynb  02_bisulfite_conversion_efficiency.ipynb
scripts/: download_real_data.py  generate_performance_report.py  generate_sample_data.py  init_bio_project.sh  main.py  pipeline_monitor.py
src/: __init__.py  bisulfite_utils.py  performance_analysis.py  real_data_analysis.py  variant_calling_utils.py
src/gatk_test_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_variant_calling.py
