[project]
name = "gatk_test_pipeline"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "scipy>=1.15.3",
    "pysam",
    "pyfaidx",
    "plotly",
    "biopython",
    "tqdm",
]

[dependency-groups]
dev = [
    "jupyter",
    "ruff",
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL", "E", "F", "B"]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "COM812",  # Conflicts with formatter
    "D203",  # Incompatible with D211
    "D213",  # Incompatible with D212
    "S101",  # Assert usage (acceptable in tests)
    "S311",  # Random number usage (acceptable for scientific simulations)
    "S602",  # shell=True usage (needed for bioinformatics tools)
    "PLR2004",  # Magic numbers (scientific constants are acceptable)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

