[project]
name = "gatk_test_pipeline"
version = "0.1.0"
description = "GATK test pipeline for bioinformatics analysis"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=2.2.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "scipy>=1.15.0",
    "pysam>=0.23.0",
    "pyfaidx>=0.8.0",
    "plotly>=6.2.0",
    "biopython>=1.85",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.0",
    "jupyterlab>=4.4.0",
    "ruff>=0.12.0",
    "pytest>=8.4.0",
    "mypy>=1.16.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL", "E", "F", "B"]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "COM812",  # Conflicts with formatter
    "D203",  # Incompatible with D211
    "D213",  # Incompatible with D212
    "S101",  # Assert usage (acceptable in tests)
    "S311",  # Random number usage (acceptable for scientific simulations)
    "S602",  # shell=True usage (needed for bioinformatics tools)
    "PLR2004",  # Magic numbers (scientific constants are acceptable)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

